// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for size: "large", weight: semi-bold, align: start, color: info and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-info);
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
  font-weight: 600;
}"
`;

exports[`getComponentCss() > should return correct css for size: "medium", weight: bold, align: end, color: contrast-high and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-contrast-high);
  text-align: end;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
  font-weight: 700;
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", weight: regular, align: end, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-primary);
  text-align: end;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: 1rem;
  font-weight: 400;
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", weight: regular, align: inherit, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-primary);
  text-align: inherit;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: 1rem;
  font-weight: 400;
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", weight: regular, align: start, color: primary and ellipsis: false 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-primary);
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: 1rem;
  font-weight: 400;
}"
`;

exports[`getComponentCss() > should return correct css for size: "small", weight: regular, align: start, color: primary and ellipsis: false 2`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-primary);
  text-align: start;
  letter-spacing: normal;
  list-style-type: none;
  white-space: inherit;
  font-size: 1rem;
  font-weight: 400;
}"
`;

exports[`getComponentCss() > should return correct css for size: {"base":"small","xs":"large","s":"medium","m":"inherit","l":"x-small","xl":"x-large"}, weight: bold, align: center, color: error and ellipsis: true 1`] = `
":host {
  display: block;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(p,span,div,address,blockquote,figcaption,cite,time,legend)) {
  all: unset !important;
}
.root {
  all: unset;
  display: block;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: var(--p-hyphens, auto);
  color: var(--p-color-error);
  text-align: center;
  letter-spacing: normal;
  list-style-type: none;
  white-space: nowrap;
  max-width: 100%;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 1rem;
  font-weight: 700;
}
@media(min-width:480px) {
  .root {
    font-size: clamp(1.27rem, 0.51vw + 1.16rem, 1.78rem);
    font-weight: 700;
  }
}

@media(min-width:760px) {
  .root {
    font-size: clamp(1.13rem, 0.21vw + 1.08rem, 1.33rem);
    font-weight: 700;
  }
}

@media(min-width:1000px) {
  .root {
    font-size: inherit;
    font-weight: 700;
  }
}

@media(min-width:1300px) {
  .root {
    font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
    font-weight: 700;
  }
}

@media(min-width:1760px) {
  .root {
    font-size: clamp(1.42rem, 0.94vw + 1.23rem, 2.37rem);
    font-weight: 700;
  }
}
"
`;
